MAT-1590 Left align video subtitle and fix times in learning content

--- a/src/components/LearningCenterCard/LearningCenterCard.module.css
+++ b/src/components/LearningCenterCard/LearningCenterCard.module.css
@@ -66,6 +66,7 @@
 }
 
 .video-subtitle {
+  text-align: start;
   font-family: var(--Font-Primary);
   font-size: 15px;
   font-weight: 400;
